--- a/wp-content/themes/wingman/assets/css/queries.scss
+++ b/wp-content/themes/wingman/assets/css/queries.scss
@@ -79,6 +79,17 @@ only screen and (min-resolution: 144dpi) {
 	      }
 	    }
 	  }
+	  &.style2{
+	    .coming-soon{
+	      .wrap{
+	        width: 50%;
+	        margin-bottom: 20px;
+	        &:nth-child(3),&:nth-child(4){
+	        	margin-bottom: 0;
+	        }
+	      }
+	    }
+	  }
 	}
 }
 
@@ -205,6 +216,24 @@ only screen and (min-resolution: 144dpi) {
         }
       }
     }
+
+    .wrapper-comingsoon {
+	  &.style3{
+	    .coming-soon{
+	      text-align: center;
+	      display: inline-block;
+	      .wrap{
+	        width: 50%;
+	        float: left;
+	        margin-bottom: 20px;
+	        &:before,
+	        &:after{
+	          display: none;
+	        }
+	      }
+	    }
+	  }
+	}
 }
 @media (max-width: 480px) {
 	.comment-content{
@@ -274,6 +303,21 @@ only screen and (min-resolution: 144dpi) {
 	        }
 	        &:last-child{
 	          border: none;
+	        }
+	      }
+	    }
+	  }
+	  &.style2{
+	    .coming-soon{
+	      .wrap{
+	        width: 100%;
+	        text-align: center;
+	        margin-bottom: 20px;
+	        &:nth-child(3){
+	        	margin-bottom: 20px;
+	        }
+	        &:nth-child(4){
+	        	margin-bottom: 0;
 	        }
 	      }
 	    }
