--- a/wp-content/themes/wingman/assets/css/plugins.css
+++ b/wp-content/themes/wingman/assets/css/plugins.css
@@ -5,6 +5,7 @@
 4. Owl carousel
 5. Custom Scroll bar
 6. slick-slider
+7. easyzoom
 
 /* 1. multi-columns-row.css
 -----------------------------------------------------------------------------------------------*/
@@ -31,3 +32,5 @@
 /* 6. slick-slider */
 .slick-slider {  position: relative;  display: block;  -moz-box-sizing: border-box;  box-sizing: border-box;  -webkit-user-select: none;  -moz-user-select: none;  -ms-user-select: none;  user-select: none;  -webkit-touch-callout: none;  -khtml-user-select: none;  -ms-touch-action: pan-y;  touch-action: pan-y;  -webkit-tap-highlight-color: transparent;  }  .slick-list {  position: relative;  display: block;  overflow: hidden;  margin: 0;  padding: 0;  }  .slick-list:focus {  outline: none;  }  .slick-list.dragging {  cursor: pointer;  cursor: hand;  }  .slick-slider .slick-track, .slick-slider .slick-list {  -webkit-transform: translate3d(0, 0, 0);  -moz-transform: translate3d(0, 0, 0);  -ms-transform: translate3d(0, 0, 0);  -o-transform: translate3d(0, 0, 0);  transform: translate3d(0, 0, 0);  }  .slick-track {  position: relative;  top: 0;  left: 0;  display: block;  }  .slick-track:before, .slick-track:after {  display: table;  content: '';  }  .slick-track:after {  clear: both;  }  .slick-loading .slick-track {  visibility: hidden;  }  .slick-slide {  display: none;  float: left;  height: 100%;  min-height: 1px;  }  [dir='rtl'] .slick-slide {  float: right;  }  .slick-slide img {  display: block; }  .slick-slide.slick-loading img {  display: none;  }  .slick-slide.dragging img {  pointer-events: none;  }  .slick-initialized .slick-slide {  display: block;  }  .slick-loading .slick-slide {  visibility: hidden;  }  .slick-vertical .slick-slide {  display: block;  height: auto;  border: 1px solid transparent;  }  .slick-arrow.slick-hidden {  display: none;  }
 
+/* 7. easyzoom */
+.easyzoom{position:relative;display:block}.easyzoom-flyout,.easyzoom-notice{position:absolute;background:#FFF}.easyzoom img{vertical-align:bottom}.easyzoom.is-loading img{cursor:progress}.easyzoom.is-ready img{cursor:crosshair}.easyzoom.is-error img{cursor:not-allowed}.easyzoom-notice{top:50%;left:50%;z-index:150;width:10em;margin:-1em 0 0 -5em;line-height:2em;text-align:center;box-shadow:0 0 10px #888}.easyzoom-flyout{z-index:100;overflow:hidden}.easyzoom--overlay .easyzoom-flyout{top:0;left:0;width:100%;height:100%}.easyzoom--adjacent .easyzoom-flyout{top:0;left:100%;width:100%;height:100%;margin-left:20px}
