--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -466,7 +466,7 @@
     }
   }
   .woocommerce-error{
-    background: #fff0ed;
+    background: $qty_bg;
     border-color: #ea4f21;
     color: $primary-color;
   }
@@ -2179,8 +2179,22 @@ div.swatch-wrapper{
 			    text-transform: uppercase;
 			    color:$title-text;;
 			    font-weight: normal;
-		    }
+          &.checkbox{
+            margin: 0;
+            line-height: normal;
+            top: 6px;
+          }
+		    }        
     	}
+      p#account_password_field{
+        padding: 0;
+        margin: 0;
+        label{
+          text-transform: uppercase;
+          color:$title-text;;
+          font-weight: normal;
+        }
+      }
     }
 }
 .select2-container{
