--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -4172,4 +4172,120 @@ form.wpcf7-form p {
       filter: progid:DXImageTransform.Microsoft.Matrix( M11=0, M12=0, M21=0, M22=0, sizingMethod='auto expand');
       zoom: 1; }
 
+/*
+ * 14.3. Page Loader
+ */
+.kt_page_loader {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: #fff;
+  z-index: 999999999; }
+  .kt_page_loader .kt_spinner {
+    width: 50px;
+    height: 50px;
+    margin: 0 auto; }
+  .kt_page_loader .page_loader_inner {
+    position: absolute;
+    -webkit-transform: translate(-50%, -50%);
+    -khtml-transform: translate(-50%, -50%);
+    -moz-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    -o-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    top: 50%;
+    left: 50%;
+    text-align: center; }
+  .kt_page_loader.style-1 .page_loader_inner {
+    animation: loader 4s infinite ease;
+    width: 50px;
+    height: 50px;
+    border: 2px solid #82c14f; }
+  .kt_page_loader.style-1 .kt_spinner {
+    vertical-align: top;
+    display: inline-block;
+    width: 100%;
+    background-color: #82c14f;
+    animation: loader-inner 4s infinite ease-in; }
+  .kt_page_loader.style-2 .kt_spinner {
+    border: 1px solid #cccccc;
+    -webkit-animation: rotate 1.3s linear 0s infinite;
+    -khtml-animation: rotate 1.3s linear 0s infinite;
+    -moz-animation: rotate 1.3s linear 0s infinite;
+    -ms-animation: rotate 1.3s linear 0s infinite;
+    -o-animation: rotate 1.3s linear 0s infinite;
+    animation: rotate 1.3s linear 0s infinite;
+    border-radius: 100%; }
+    .kt_page_loader.style-2 .kt_spinner:after {
+      content: '';
+      position: absolute;
+      width: 15px;
+      height: 15px;
+      background: #d0a852;
+      -webkit-border-radius: 50%;
+      -khtml-border-radius: 50%;
+      -moz-border-radius: 50%;
+      -ms-border-radius: 50%;
+      -o-border-radius: 50%;
+      border-radius: 50%;
+      -webkit-animation: 3s linear 0s infinite;
+      -khtml-animation: 3s linear 0s infinite;
+      -moz-animation: 3s linear 0s infinite;
+      -ms-animation: 3s linear 0s infinite;
+      -o-animation: 3s linear 0s infinite;
+      animation: 3s linear 0s infinite;
+      left: -5px;
+      top: 18px; }
+  .kt_page_loader.style-3 .kt_spinner {
+    border: 2px solid #cccccc;
+    border-bottom-color: #d0a852;
+    -webkit-animation: rotate 1.5s linear 0s infinite;
+    -khtml-animation: rotate 1.5s linear 0s infinite;
+    -moz-animation: rotate 1.5s linear 0s infinite;
+    -ms-animation: rotate 1.5s linear 0s infinite;
+    -o-animation: rotate 1.5s linear 0s infinite;
+    animation: rotate 1.5s linear 0s infinite;
+    border-radius: 100%; }
+
+@keyframes loader {
+  0% {
+    transform: rotate(0deg); }
+  25% {
+    transform: rotate(180deg); }
+  50% {
+    transform: rotate(180deg); }
+  75% {
+    transform: rotate(360deg); }
+  100% {
+    transform: rotate(360deg); } }
+@keyframes loader-inner {
+  0% {
+    height: 0; }
+  25% {
+    height: 0; }
+  50% {
+    height: 100%; }
+  75% {
+    height: 100%; }
+  100% {
+    height: 0; } }
+@-webkit-keyframes rotate {
+  from {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+@keyframes rotate {
+  from {
+    -ms-transform: rotate(0deg);
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg); }
+  to {
+    -ms-transform: rotate(360deg);
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg); } }
+
 /*# sourceMappingURL=style.css.map */
