--- a/wp-content/themes/wingman/assets/css/_variables.scss
+++ b/wp-content/themes/wingman/assets/css/_variables.scss
@@ -40,6 +40,7 @@ $border-header-tabs: #ed727c;
 $border-image: #ebebeb;
 
 $nav-bg: #1e1e1e;
+$bg-popup: #111111;
 
 $black: #000000;
 $white: #FFFFFF;
