--- a/wp-content/themes/wingman/assets/css/style.scss
+++ b/wp-content/themes/wingman/assets/css/style.scss
@@ -4441,6 +4441,9 @@ form.wpcf7-form{
   background: #fff;
   position: relative;
   margin: 0 auto;
+  .white-popup-block{
+    padding-bottom: 30px;
+  }
   h3.title-top{
     text-align: center;
     margin: 0;
@@ -4467,6 +4470,70 @@ form.wpcf7-form{
     }
     &:before{
       @include rotate(-45);
+    }
+  }
+  .mailchimp-form{
+    max-width: 350px;
+    margin: 0 auto;
+    position: relative;
+    input{
+      border: none;
+      border-bottom: 1px solid $title-text;
+      padding: 4px 0;
+      height: auto;
+      color: $main-text;
+    }
+    button{
+      background: none;
+      width: auto;
+      height: auto;
+      padding: 0;
+      color: $primary-color;
+      border: none;
+      position: absolute;
+      right: 0;
+      top: 50%;
+      @include transform(translatey(-50%));
+    }
+  }
+  h4.newletter-title{
+    font-size: 14px;
+    text-transform: uppercase;
+    line-height: 24px;
+    letter-spacing: 0.2em;
+    text-align: center;
+    margin-bottom: 35px;
+  }
+  form.dont-show{
+    padding: 20px 0;
+    text-align: center;
+    background: $bg-popup;
+    label{
+      font-size: 12px;
+      font-weight: 300;
+      position: relative;
+      padding-left: 18px;
+      margin: 0;
+      line-height: 1;
+      &:before{
+        width: 12px;
+        height: 12px;
+        border: 1px solid $white;
+        @include border-radius('2px');
+        content: "";
+        display: block;
+        position: absolute;
+        left: 0;
+        bottom: 1px;
+      }
+    }
+    input{
+      @include opacity(0);
+      &:checked{
+        ~ label:before{
+          background: $white;
+        }
+      }
     }
   }
 }
