--- a/wp-content/themes/wingman/assets/css/style.css
+++ b/wp-content/themes/wingman/assets/css/style.css
@@ -2474,6 +2474,8 @@ article.post-item {
   margin: 0; }
   .comment-list li {
     list-style: none; }
+    .comment-list li ul.children {
+      padding-left: 97px; }
 
 .comment-form p label {
   display: block;
@@ -2589,9 +2591,7 @@ article.post-item {
   margin-left: 130px; }
 
 .comment-respond {
-  margin-bottom: 25px;
-  padding-top: 55px;
-  border-top: 1px solid #e9e9e9; }
+  margin-bottom: 25px; }
 
 .comment-notes,
 .form-allowed-tags {
@@ -2610,7 +2610,9 @@ article.post-item {
     border-radius: 2px; }
 
 #related-article {
-  margin-bottom: 10px; }
+  padding-bottom: 10px;
+  border-bottom: 1px solid #e9e9e9;
+  margin-bottom: 55px; }
   #related-article h2.entry-title {
     font-size: 14px;
     margin: 0;
