--- a/wp-content/themes/wingman/assets/css/woocommerce.css
+++ b/wp-content/themes/wingman/assets/css/woocommerce.css
@@ -32,7 +32,7 @@
   border: 2px solid #e5e5e5;
   border-radius: 0;
   font-size: 0;
-  line-height: 26px; }
+  line-height: 25px; }
   .yith-woocompare-widget a.remove:hover,
   .woocommerce a.remove:hover {
     color: red !important;
@@ -97,7 +97,8 @@
   vertical-align: middle;
   text-align: center;
   font-weight: 600;
-  letter-spacing: 0.2em; }
+  letter-spacing: 0.2em;
+  text-transform: uppercase; }
   .woocommerce #respond input#submit:hover,
   .woocommerce a.button:hover,
   .woocommerce button.button:hover,
