--- a/wp-content/themes/wingman/assets/css/woocommerce.scss
+++ b/wp-content/themes/wingman/assets/css/woocommerce.scss
@@ -29,7 +29,7 @@
 	    border:2px solid $border-color;
 	    border-radius:0;
 	    font-size:0;
-	    line-height: 26px;
+	    line-height: 25px;
 	    &:hover{
 	    	color: red !important;
     		background: none !important;
@@ -111,6 +111,7 @@
     text-align: center;
     font-weight: 600;
     letter-spacing: 0.2em;
+    text-transform: uppercase;
     &:hover{
       background: $primary-color;
       color: $white;
